syntax = "proto3";
package raft_service;

/* -------------------------------------------------------------------- */
message ResponseStatus {
  int32 code = 1;
  string data = 2;
}

message WriteVnodeReq {
    uint32 vnode_id = 1;
    uint32 group_id = 2
    uint32 precision = 3;
    string tenant =4;
    bytes data = 5;
}

message RaftVoteReq {
    uint32 vnode_id = 1;
    uint32 group_id = 2
    string data = 3;
}

message RaftSnapshotReq {
    uint32 vnode_id = 1;
    uint32 group_id = 2
    bytes data = 3;
}

message RaftAppendEntriesReq {
    uint32 vnode_id = 1;
    uint32 group_id = 2
    bytes data = 3;
}

/* -------------------------------------------------------------------- */
service RaftService {
  rpc WriteVnode(WriteVnodeReq) returns (ResponseStatus) {};
  rpc RaftVote(RaftVoteReq) returns (ResponseStatus) {};
  rpc RaftSnapshot(RaftSnapshotReq) returns (ResponseStatus) {};
  rpc RaftAppendEntries(RaftAppendEntriesReq) returns (ResponseStatus) {};
}
